--- a/src/index.css
+++ b/src/index.css
@@ -18,56 +18,83 @@
   --white: #F6F4F0;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
-}
-a:hover {
-  color: #535bf2;
-}
-
-body {
-  margin: 0;
+.form-container {
   display: flex;
-  place-items: center;
-  min-width: 320px;
-  min-height: 100vh;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  justify-self: center;
+  padding: 2rem;
+  width: fit-content;
+  background-color: var(--navy);
+  border-radius: clamp(1em, 0em, 1em);
 }
 
-h1 {
-  font-size: 3.2em;
-  line-height: 1.1;
+.row-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  gap: 1.5rem;
 }
 
-button {
+.travel-type-button {
+  background-color: var(--mint);
+  border: none;
+  color: white;
+  padding: 0.8em 1.4em;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.1rem;
+  font-family: 'Arial', sans-serif;
   border-radius: 8px;
-  border: 1px solid transparent;
-  padding: 0.6em 1.2em;
-  font-size: 1em;
-  font-weight: 500;
-  font-family: inherit;
-  background-color: #1a1a1a;
+  transition: all 0.3s ease;
   cursor: pointer;
-  transition: border-color 0.25s;
-}
-button:hover {
-  border-color: #646cff;
-}
-button:focus,
-button:focus-visible {
-  outline: 4px auto -webkit-focus-ring-color;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
 }
 
-@media (prefers-color-scheme: light) {
-  :root {
-    color: #213547;
-    background-color: #ffffff;
-  }
-  a:hover {
-    color: #747bff;
-  }
-  button {
-    background-color: #f9f9f9;
-  }
+.selected {
+  background-color: var(--teal);
+}
+
+.travel-type-button:hover {
+  background-color: var(--teal);
+}
+
+.input-content {
+  padding: 0.8em 1.4em;
+  font-size: 1rem;
+  width: 15em;
+  font-family: 'Arial', sans-serif;
+  color: #333;
+  background-color: var(--teal);
+  border: 0.1em solid #ddd;
+  border-radius: clamp(0.5em, 0em, 0.5em);
+  outline: none;
+  box-sizing: border-box;
+}
+
+.input-label {
+  margin-bottom: 0.5em;
+}
+
+.submit-button {
+  padding: 0.8em 1.4em;
+  margin-top: 1rem;
+  background-color: var(--mint);
+  border: none;
+  color: white;
+  text-align: center;
+  text-decoration: none;
+  display: inline-block;
+  font-size: 1.1rem;
+  font-family: 'Arial', sans-serif;
+  border-radius: 8px;
+  transition: all 0.3s ease;
+  cursor: pointer;
+  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+}
+
+.submit-button:hover {
+  background-color: var(--teal);
 }
