--- a/src/index.css
+++ b/src/index.css
@@ -66,7 +66,7 @@
   font-size: 1rem;
   width: 15em;
   font-family: 'Arial', sans-serif;
-  color: #333;
+  color: var(--white);
   background-color: var(--teal);
   border: 0.1em solid #ddd;
   border-radius: clamp(0.5em, 0em, 0.5em);
