--- a/src/stylesheets/ConnectionForm.css
+++ b/src/stylesheets/ConnectionForm.css
@@ -1,16 +1,65 @@
-form {
-    width: 20%;
+.Connection-form {
+    width: 100%;
+    height: 100vh;
+    color: #242424;
     display: flex;
     flex-direction: column;
     align-items: center;
     justify-content: center;
+    gap: 1em;
     background-color: var(--white);
-    border-radius: 1rem;
 }
 
-input {
-    width: 80%;
+.Connection-form-title {
+    color: var(--navy);
+    font-size: 2.5em;
+}
+
+.Connection-form-container {
+    width: 40%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+}
+
+.Connection-form-label {
+    justify-self: flex-start;
+}
+
+.Connection-form-input {
+    width: 100%;
+    margin-top: 0.2em;
     background-color: var(--white);
     padding: 15px;
-    margin: 10px 0;
+    color: black;
+}
+
+.Connection-form-submit {
+    font-size: 1em;
+    padding: 1em 1.6em;
+    background-color: var(--teal);
+    border: none;
+    border-radius: 10px;
+    transition: all 0.5s ease;
+}
+
+.Connection-form-submit:hover {
+    background-color: var(--navy);
+    cursor: pointer;
+}
+
+.Inscription-text {
+    font-size: 0.7em;
+    cursor: default;
+    color: gray;
+    text-align: center;
+}
+
+.Inscription-link {
+    color: cornflowerblue;
+    text-decoration: underline;
+}
+
+.Inscription-link:hover {
+    cursor: pointer;
 }
