Divided Connection.tsx to be in 2 different pages (Connection and Inscription) and modified the header to link to the connection page

--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import "stylesheets/ConnectionForm.css";
+@import "stylesheets/Header.css";
 
 :root {
   font-family: system-ui, Avenir, Helvetica, Arial, sans-serif;
