--- a/src/stylesheets/Header.css
+++ b/src/stylesheets/Header.css
@@ -1,7 +1,6 @@
 .App-header {
-    position: absolute;
-    top: 0;
-    left: 0;
+    position: sticky;
+    top: 0; left: 0;
     display: flex;
     width: 100%;
     padding: 1.5em 0;
@@ -27,6 +26,8 @@
     font-size: 1.1rem;
     transition: all 0.5s ease;
     box-shadow: #4c4c4c 2px 2px 2px;
+    text-decoration: none;
+    color: white;
 }
 
 .App-header-right:hover {
