--- a/src/stylesheets/Cart.css
+++ b/src/stylesheets/Cart.css
@@ -5,8 +5,7 @@
     flex-direction: column;
     align-items: center;
     justify-content: center;
-    background: var(--navy);
-    padding: 2rem;
+    background-color: var(--navy);
 }
 
 .cart-container h2 {
